[gd_scene load_steps=3 format=3 uid="uid://danu1ywx2mjvr"]

[ext_resource type="Script" uid="uid://fp07hnhgv1cj" path="res://scenes/ui/CharacterCreation.gd" id="1_eu6pg"]
[ext_resource type="Texture2D" uid="uid://c4wcwj7dwjsag" path="res://assets/Images/backgrounds/main menu 2.png" id="2_misp4"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_eu6pg")

[node name="MainMenu2" type="Sprite2D" parent="."]
modulate = Color(0.631373, 0.568627, 0.568627, 1)
position = Vector2(608, 352)
scale = Vector2(0.822, 0.822)
texture = ExtResource("2_misp4")

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 64.0
offset_right = 360.0
offset_bottom = 95.0
placeholder_text = "Type Name Here..."

[node name="RaceOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 128.0
offset_right = 112.0
offset_bottom = 148.0
tooltip_text = "Race"

[node name="ClassOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 192.0
offset_right = 112.0
offset_bottom = 212.0
tooltip_text = "Class"

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 128.0
offset_right = 280.0
offset_bottom = 151.0

[node name="CreateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 256.0
offset_right = 220.0
offset_bottom = 287.0
text = "Create Character"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 472.0
offset_right = 308.0
offset_bottom = 503.0
text = "Back to Character Selection"
